--- a/app/templates/cv.html
+++ b/app/templates/cv.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>cs-apps</title>
+    <title>Jovani's CV</title>
     <link rel="stylesheet" href="css/pagestyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -16,7 +16,7 @@
         <article class="main-article">
 
             <div class="single-div">
-                <h1>Under construction!</h1>
+                <h1>CV under construction!</h1>
                
             </div>
 
