--- a/app/templates/fgsumm.html
+++ b/app/templates/fgsumm.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>cs-apps</title>
+	<title>Fuzzy Summ</title>
 	<link rel="stylesheet" href="css/pagestyle.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
