--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,21 +1,32 @@
 <header class="flex-container">
+    
+    <link rel="stylesheet" type="text/css" href="css/pagestyle.css">
+    <link rel="stylesheet" type="text/css" href="css/header-style.css">
+    <link rel="stylesheet" type="text/css" href="css/home-style.css">
+    <link rel="stylesheet" type="text/css" href="css/footer-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <nav class="menu">
-        <ul>
-            <li><a href="/home">Home</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/cv">CV</a></li>
-            <li><a href="/index">Jovani Brasil</a></li>
-        </ul>
-    </nav>
-
-    <!-- <aside class="authentication">
-        <a href wm-link="auth.html" wm-destino=".content" ></a>
-    </aside> -->
-
-    <button class="menu-toggle">
-        <i class="fa fa-lg fa-bars"></i>
-    </button>
+   
+    <div class="topnav" id="myTopnav">
+        <a href="/Home">Jovani Brasil</a>
+        <a href="/Home" >Home</a>
+        <a href="/Projects">Projects</a>
+        <a href="/Blog">Blog</a>
+        <a href="/CV">CV</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+    </div>
 
 </header>
+
+<script>
+    function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
