--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>cs-apps</title>
-    <link rel="stylesheet" href="css/pagestyle.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Jovani Brasil</title>
 </head>
 
 <body>
