--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>cs-apps</title>
+    <title>Jovani's Projects</title>
     <link rel="stylesheet" href="css/pagestyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,6 +18,7 @@
             <div class="single-div">
                 <h1>My projects under construction</h1>
                 <ul>
+                    <li>This Web-site</li>
                     <li>Natural Language Processing</li>
                     <ul>
                         <li>
