Add home content and fix some css bugs

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,18 +25,37 @@
                         /></a>
                 </div>
                 <div>
-                    <i class="fa fa-phone" style="font-size:16px; color: #000;">+55 (51) 993585599</i><br/>
-                    <i class="fa fa-envelope" style="font-size:16px; color: #000;">jovanibrasil@gmail.com</i>
+                    <i class="fa fa-phone"  title="Phone" style="font-size:16px; color: #000;"> +55 (51) 993585599</i><br/>
+                    <i class="fa fa-envelope"  title="Email" style="font-size:16px; color: #000;"> jovanibrasil@gmail.com</i>
                 </div>
 
             </div>
 
             <div class="right-panel">
                 <!-- Main content -->
-                <h1>Area Under Construction!!</h1>
-                <img src="weather-model.png" alt="Weather model" style="width:304px;height:228px;">
-                <p>Welcome to my personal page!
-                    <p>There should be something here, but I don't know what yet.
+                <!-- <img src="weather-model.png" alt="Weather model" style="width:304px;height:228px;"> -->
+                <!-- <p>Welcome to my personal page!
+                    <p>There should be something here, but I don't know what yet. -->
+
+                <p>
+                Bem vindo a minha página pessoal!
+                </p>
+
+                <p>
+                Meu nome é Jovani Brasil, sou estudante de ciência da computação na Pontifícia Universidade Católica 
+                do Rio Grande do Sul e atualmente estou me preparando para começar a trabalhar como desenvolvedor de software. 
+                Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
+                e machine learning. Caso seja necessário, sinta-se à vontade para entrar em contato comigo. Você também pode 
+                visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
+                </p>
+
+                <p>
+                A ideia desta página é concentrar meus projetos, ideias e currículo, também servindo como objeto de aprendizagem,
+                uma vez que tudo que foi e que será implementado aqui são resultados obtidos dos meus estudos de diversas tecnologias, 
+                tanto no frontend quanto no backend. Para mais detalhes sobre as implementações, 
+                consulte meus  <a href="/Projects">projetos</a>.
+                </p>
+
             </div>
 
         </article>
