--- a/app/static/css/home-style.css
+++ b/app/static/css/home-style.css
@@ -7,6 +7,9 @@
     background-color: #444;
 }
 
+i {
+    margin: 5px 3px 5px;
+}
 
 .main-article {
     display: -webkit-box;
@@ -20,17 +23,31 @@
 }
 
 .left-panel {
+     /* display: flex; */
      flex-grow: 1; 
      text-align: center;
+     margin: 10px 100px 10px 100px;
 }
 
 .right-panel {
+    /* display: flex; */
     flex-grow: 2; 
-    text-align: center;
+    display: inline-block;
+    text-align: justify;
+    width: auto;
+    margin: 10px 150px 10px 150px;
 }
-
+/* 
 @media (max-width: 700px) {
     .right-panel {
         display: none;
     }
+} */
+
+@media (max-width: 900px) {
+    .main-article {
+        flex-direction: column;
+    }
 }
+
+
