Add cv download link and change menu itens to portuguese

--- a/app/templates/cv.html
+++ b/app/templates/cv.html
@@ -16,8 +16,20 @@
         <article class="main-article">
 
             <div class="single-div">
-                <h1>CV under construction!</h1>
+                <h1>Currículo</h1>
                
+                <h3>Download</h3>
+
+                Formato PDF: <a href="jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">
+                    <i class="fa fa-file-pdf-o"  style="font-size:18px;color:red"></i>
+                </a>
+
+                <h3>Jovani Brasil</h3>
+
+
+
+                
+
             </div>
 
         </article>
