--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -10,7 +10,7 @@
     <div class="topnav" id="myTopnav">
         <a href="/Home">Jovani Brasil</a>
         <a href="/Home" >Home</a>
-        <a href="/Projects">Projects</a>
+        <a href="/Projects">Projetos</a>
         <a href="/Blog">Blog</a>
         <a href="/CV">CV</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
