--- a/app/templates/cv.html
+++ b/app/templates/cv.html
@@ -20,13 +20,12 @@
                
                 <h3>Download</h3>
 
-                Formato PDF: <a href="jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">
-                    <i class="fa fa-file-pdf-o"  style="font-size:18px;color:red"></i>
-                </a>
+                Meu currículo completo pode ser baixado em PDF <a href="jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">
+                    <!-- <i class="fa fa-file-pdf-o"  style="font-size:18px;color:red"></i> -->
+                    AQUI
+                </a>.
 
-                <h3>Jovani Brasil</h3>
-
-
+                <h3>Jovani Brasil (Currículo resumido)</h3>
 
                 
 
