--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -32,10 +32,8 @@
             </div>
 
             <div class="right-panel">
-                <!-- Main content -->
-                <!-- <img src="weather-model.png" alt="Weather model" style="width:304px;height:228px;"> -->
                 <!-- <p>Welcome to my personal page!
-                    <p>There should be something here, but I don't know what yet. -->
+                <p>There should be something here, but I don't know what yet. -->
 
                 <p>
                 Bem vindo a minha página pessoal!
@@ -55,6 +53,13 @@
                 tanto no frontend quanto no backend. Para mais detalhes sobre as implementações, 
                 consulte meus  <a href="/Projects">projetos</a>.
                 </p>
+
+                <p>
+                Esta página e meus projetos estão todos em deselvolvimento, então sugestões de melhorias e notificação de erros são bem 
+                vindas para o processo de construção das soluções. 
+                </p>                
+
+                <img class="under-construction" src="under-construction.png" alt="Under Construction" > 
 
             </div>
 
