--- a/app/static/css/home-style.css
+++ b/app/static/css/home-style.css
@@ -26,7 +26,7 @@ i {
      /* display: flex; */
      flex-grow: 1; 
      text-align: center;
-     margin: 10px 100px 10px 100px;
+     margin: 10px 75px 10px 75px;
 }
 
 .right-panel {
@@ -34,15 +34,19 @@ i {
     flex-grow: 2; 
     display: inline-block;
     text-align: justify;
-    width: auto;
-    margin: 10px 150px 10px 150px;
+    /* width: auto; */
+    margin: 10px 75px 10px 75px;
+    align-items: center;
+    text-align: center;
+    text-align: center;
+    
 }
-/* 
-@media (max-width: 700px) {
+
+@media screen and (max-width: 600px) {
     .right-panel {
-        display: none;
+        margin: 10px 50px 10px 50px;
     }
-} */
+}
 
 @media (max-width: 900px) {
     .main-article {
@@ -50,4 +54,8 @@ i {
     }
 }
 
+div .under-construction {
+    width:150px;
+    height:128px;
+}
 
