--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -5,6 +5,8 @@
     <title>Jovani's Blog</title>
     <link rel="stylesheet" href="css/pagestyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/blog.css">
+    
 </head>
 
 <body>
@@ -13,14 +15,10 @@
 
         <%include header.html%>
 
-        <article class="main-article">
+        <div class="centered-elements">
+            <h1>Blog under construction!</h1>
+            <img src="under-construction.png" alt="Under Construction" style="width:304px;height:228px;">
+        </div>
 
-            <div class="single-div">
-                <h1>Blog under construction!</h1>
-                
-
-            </div>
-
-        </article>
     </div>
 </html>
