Change html structure, add webstore links

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -31,10 +31,15 @@
                             </li><li><a href="#nlp1">Essay Checker</a>
                             </li><li><a href="#nlp2">Time and cause-effect extraction</a></li>
                         </ul>
-                        <li ><a href="#se">Software engineering</a></li>
+                    
+
+                        <li><a href="#se">Software engineering (5 projetos)</a></li>
                         <ul>    
-                            <li><a href="#se0">Smart Integrated Development Environment</a></li>
-                            <li><a href="#se1">Android and Java Apps (Web and Desktop)</a></li>
+                            <li><a href="#se0">Java Web</a></li>
+                                <ul><li><a href="#se00"> Simple Web Store</a></li></ul>
+                            <li><a href="#se1">Desktop Apps</a></li>
+                                <ul><li><a href="#se10">Smart Integrated Development Environment</a></li></ul>
+                            <li><a href="#se2">Android Apps</a></li>
                         </ul>
 
                         <li ><a href="#ai">Artificial Intelligence</a></li>
@@ -77,8 +82,11 @@
                     </ul>
                     <li id="se" folder><h2>Software engineering (5 projetos)</h2></li>
                     <ul>    
-                        <li id="se0">Smart Integrated Development Environment</li>
-                        <li id="se1">Android and Java Apps (Web and Desktop)</li>
+                        <li id="se0">Java Web</li>
+                            <ul><li id="se00"><a href="/webstore"> Simple Web Store</a></li></ul>
+                        <li id="se1">Desktop Apps</li>
+                            <ul><li id="se10">Smart Integrated Development Environment</li></ul>
+                        <li id="se2">Android Apps</li>
                     </ul>
 
                     <li id="ai" folder><h2>Artificial Intelligence (2 Projetos)<h2></li>
