Fix link to store-system app

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -83,7 +83,7 @@
                     <li id="se" folder><h2>Software engineering (5 projetos)</h2></li>
                     <ul>    
                         <li id="se0">Java Web</li>
-                            <ul><li id="se00"><a href="/webstore"> Simple Web Store</a></li></ul>
+                            <ul><li id="se00"><a href="/store-system" target="_blank"> Simple Web Store</a></li></ul>
                         <li id="se1">Desktop Apps</li>
                             <ul><li id="se10">Smart Integrated Development Environment</li></ul>
                         <li id="se2">Android Apps</li>
