--- a/templates/home.html
+++ b/templates/home.html
@@ -43,15 +43,17 @@
                 Meu nome é Jovani Brasil, sou estudante de ciência da computação na Pontifícia Universidade Católica 
                 do Rio Grande do Sul e atualmente estou me preparando para começar a trabalhar como desenvolvedor de software. 
                 Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
-                e machine learning. Caso seja necessário, sinta-se à vontade para entrar em contato comigo. Você também pode 
-                visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
+                e machine learning. Tenho interesse nas mais diversas técnologias e gosto de estar sempre me atualizando. 
+                Sou apaixonado e defensor da educação à distância, sendo fã de plataformas como Coursera, Udemy
+                e Complexity Explorer. Caso necessário, sinta-se à vontade para entrar em contato comigo. 
+                Você também pode visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
                 </p>
 
                 <p>
                 A ideia desta página é concentrar meus projetos, ideias e currículo, também servindo como objeto de aprendizagem,
                 uma vez que tudo que foi e que será implementado aqui são resultados obtidos dos meus estudos de diversas tecnologias, 
                 tanto no frontend quanto no backend. Para mais detalhes sobre as implementações, 
-                consulte meus  <a href="/Projects">projetos</a>.
+                consulte meus  <a href="/Projects">projetos</a>. 
                 </p>
 
                 <p>
