--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,7 +17,6 @@
 
             <div class="single-div">
 
-
                 <!-- <h1>My projects under construction</h1> -->
                 <h1 class="centered-text">Meus projetos</h1>
                   
@@ -25,28 +24,34 @@
                     <h2 class="centered-text">Índice</h2>
                     <ul>
                         <li><a href="#this-website">Este Web-site</a></li>
-                        <li><a href="#nlp">Natural Language Processing</a></h2></li>
+                        <li><a href="#ai">Inteligência Artificial</a></h2></li>
                         <ul>
-                            <li><a href="#nlp0">FGSumm - Fuzzy Genetic Text Summarization</a>
-                            </li><li><a href="#nlp1">Essay Checker</a>
-                            </li><li><a href="#nlp2">Time and cause-effect extraction</a></li>
+                            <li><a href="#ai0">FGSumm</a></li>
+                            <li><a href="#ai1">Essay Checker</a></li>
+                            <li><a href="#ai2">Time and cause-effect extraction</a></li>
+                            <li><a href="#ai3">Agents Simulator</a></li>
+                            <li><a href="#ai4">Experimentos em Machine learning</a></li>
+                        
                         </ul>
                     
-
-                        <li><a href="#se">Software engineering (5 projetos)</a></li>
+                        <li><a href="#se">Software engineering</a></li>
                         <ul>    
                             <li><a href="#se0">Java Web</a></li>
-                                <ul><li><a href="#se00"> Simple Web Store</a></li></ul>
+                                <ul><li><a href="#se00">Loja Web Java</a></li></ul>
+                                <ul><li><a href="#se00">Sistema de apoio logístico Web JAVA</a></li></ul>
                             <li><a href="#se1">Desktop Apps</a></li>
-                                <ul><li><a href="#se10">Smart Integrated Development Environment</a></li></ul>
+                                <ul><li><a href="#se10">King's Valley Game</a></li></ul>
+                                <ul><li><a href="#se11">Smart Integrated Development Environment</a></li></ul>
                             <li><a href="#se2">Android Apps</a></li>
-                        </ul>
 
-                        <li ><a href="#ai">Artificial Intelligence</a></li>
-                        <ul>
-                            <li> <a href="#ai0">Agents Simulation</a></li>
-                            <li> <a href="#ai1">Machine learning implementations</a></li>
-                        </ul>    
+                            <ul><li><a href="#se20">QRAttendance</a></li></ul>
+                            <ul><li><a href="#se21">Cheetah</a></li></ul>
+                            <ul><li><a href="#se22">King's Valley</a></li></ul>
+
+                        </ul>
+   
+                        <li><a href="#ot">Outros projetos</a></li>
+
                     </ul>
                 </div>     
                 
@@ -61,38 +66,118 @@
                             <p>
                                     As páginas Home, Projects e CV do frontend são implementadas sem a utilização de bibliotecas ou frameworks, 
                                     utilizando apenas recursos básicos do desenvolvimento web, como html, css e javascript. Para o seu backend, 
-                                    foi utilizado node runtime para rodar um servidor em javascript responsável por servir as páginas web.  
+                                    foi utilizado o node runtime para rodar um servidor em javascript responsável por servir as páginas web.  
                                     
-                                    Note que em Blog ainda está vazio, pois ainda nem foram definidas as tecnologias que serão empregadas.  
+                                    Note que em Blog ainda está vazio, pois ainda estão sendo definidas as tecnologias que serão utilizadas
+                                    em sua implementação, que deverá ocorrer muito em breve.  
                             </p><p>
                                     A partir da página Projects, é possível ser redirecionado para projetos específicos que utilizam diferentes 
                                     tipos de tecnologias no frontend e no backend. Você pode verificar da seção de cada projeto, quais foram as 
                                     tecnologias utilizadas, assim como o porquê o como da escolha de cada tecnologia.
                             </p>
+                            <h3>Infraestrutura</h3>
+                            <p>
+                                Atualmente esta página web e minhas soluções estão hospedadas em um servidor, utilizando diversos Docker 
+                                containers para conciliar de forma escalável e confiável os diversos tipos de tecnologias. Para orquestração
+                                está sendo utilizado Docker compose, devido a simplicidade do projeto. Um servidor NGINX é utilizado para 
+                                implementação de um proxy reverso no sistema.
+
+                                <!-- // TODO image -->
+
+                            </p>
                         </div>
-                    <li id="nlp" folder><h2>Natural Language Processing (3 Projetos)</h2></li>
+
+                    <li id="ai" folder><h2>Inteligência Artificial</h2></li>
+                    <div>
+
+                    Se você leu um pouco sobre mim na página principal deste site, você já sabe que meu principal interesse é na área de 
+                    processamento de linguagem natural, que atualmente está fortemente relacionada com inteligência artificial. Tenho interesse
+                    também na teoria de agentes e em técnicas de machine learning. 
+
+                    Nesta seção existe um resumo dos meus projetos e ponteiros para alguns resultados obtidos.
+                    <br/><br/>
                     <ul>
-                        <li id="nlp0">
-                            <a href="/fgsumm"> FGSumm - Fuzzy Genetic Text Summarization</a>
-                        </li><li id="n  lp1">
-                            <a>Essay Checker</a>
-                        </li><li id="nlp2">
-                            <a>Time and cause-effect extraction</a>
+                        <li id="ai0">
+                            FGSumm
+                            <p>
+                                O FGSumm é um sumarizador automático extrativo mono-documento baseado em features que utiliza lógica fuzzy como
+                                mecânismo de decisão. Informações detalhadas e uma versão web experimental podem ser acessadas 
+                                <a href="/fgsumm">aqui</a>. Você também pode acessar detalhes e o código fonte do projeto FGsumm aqui (Github).
+                            </p>
                         </li>
+                        <li id="ai1">
+                            Essay Checker
+                            <p>
+                                O Essay Checker é um ambiente web para correção textos, em especial redações, que busca analisar e propor soluções
+                                para problemas de redação em nível léxico, sintático, e semântico. Este projeto está em andamento, em breve postarei 
+                                resultados.
+                            </p>
+                        </li>
+                        <li id="ai2">
+                            Time and cause-effect extraction
+                        </li>
+
+                        <li id="ai3">Agents Simulator</li>
+                        <li id="ai4">Experimentos em Machine learning</li>
+
                     </ul>
-                    <li id="se" folder><h2>Software engineering (5 projetos)</h2></li>
+                    </div>
+
+                    <li id="se" folder><h2>Software engineering</h2></li>
+
+                    <!-- // descrição dos objetivos -->
+
                     <ul>    
                         <li id="se0">Java Web</li>
-                            <ul><li id="se00"><a href="/store-system" target="_blank"> Simple Web Store</a></li></ul>
+                            <ul>
+                                <li id="se00">
+                                    Loja Web Java
+                                    <p>
+                                        A ideia deste projeto é desenvolver uma loja Web em Java. O objetivo é, ao fim do projeto, ter as 
+                                        funcionalidas básicas de uma loja web qualquer, como listagens de produtos, carrinho de compras, 
+                                        login de usuários e gerênciamento de produtos do site.
+                                    </p>
+                                    <p>
+                                        A versão atual do sistema implementa o gerenciamento de produtos. Para isso foram utilizadas 
+                                        as tecnologias JSF, Primefaces, Hibernate, MySql.   
+                                    </p>
+                                    <p>
+                                        O código fonte pode ser conferido aqui (Github) e uma versão online do sistema pode ser acessado 
+                                        <a href="/store-system" target="_blank">aqui</a>. A versão online pode demorar a carregar, devido
+                                        a limitações do servidor utilizado.        
+                                    </p>
+                                </li>
+                                <li id="se01">
+                                    Sistema de apoio logístico Web JAVA
+                                </li>
+                            </ul>
                         <li id="se1">Desktop Apps</li>
-                            <ul><li id="se10">Smart Integrated Development Environment</li></ul>
+                            <ul>
+                                <li id="se10">King's Valley</li>
+                                <li id="se11">Gerenciador de arquivos</li>
+                                <li id="se12">Smart Integrated Development Environment</li>
+                            </ul>
                         <li id="se2">Android Apps</li>
-                    </ul>
-
-                    <li id="ai" folder><h2>Artificial Intelligence (2 Projetos)<h2></li>
-                    <ul>
-                        <li id="ai0">Agents Simulation</li>
-                        <li id="ai1">Machine learning implementations</li>
+                            <ul>
+                                <li id="se20">
+                                    QRAttendance
+                                    <p></p>
+                                </li>
+                                <li id="se21">
+                                    Cheetah
+                                    <p></p>
+                                </li>
+                                <li id="se22">
+                                    King's Valley
+                                    <p></p>
+                                </li>
+                            </ul>
+                        <li id="ot">Outras projetos</li>
+                        <ul>
+                            <!-- <li id="ot0">
+                                <p></p>
+                            </li> -->
+                        </ul>
                     </ul>
                     
                 </ul>
