Add resume summary, add home greeting ans fix some projects html problems

--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
                 <p>There should be something here, but I don't know what yet. -->
 
                 <p>
-                Bem vindo a minha página pessoal!
+                Olá, bem vindo a minha página pessoal!
                 </p>
 
                 <p>
