--- a/templates/projects.html
+++ b/templates/projects.html
@@ -36,18 +36,31 @@
                     
                         <li><a href="#se">Software engineering</a></li>
                         <ul>    
-                            <li><a href="#se0">Java Web</a></li>
-                                <ul><li><a href="#se00">Loja Web Java</a></li></ul>
-                                <ul><li><a href="#se00">Sistema de apoio logístico Web JAVA</a></li></ul>
-                            <li><a href="#se1">Desktop Apps</a></li>
-                                <ul><li><a href="#se10">King's Valley Game</a></li></ul>
-                                <ul><li><a href="#se11">Smart Integrated Development Environment</a></li></ul>
-                            <li><a href="#se2">Android Apps</a></li>
+                            <li>
+                                <a href="#se0">Java Web</a>
+                                <ul>
+                                    <li><a href="#se00">Loja Web Java</a></li>
+                                    <li><a href="#se00">Sistema de apostas Web JAVA</a></li>
+                                </ul>
+                            </li>
+                                
+                            <li>
+                                <a href="#se1">Desktop Apps</a>
+                                <ul>
+                                    <li><a href="#se10">King's Valley Game</a></li>
+                                    <li><a href="#se11">Smart Integrated Development Environment</a></li>
+                                </ul>
+                            </li>
 
-                            <ul><li><a href="#se20">QRAttendance</a></li></ul>
-                            <ul><li><a href="#se21">Cheetah</a></li></ul>
-                            <ul><li><a href="#se22">King's Valley</a></li></ul>
-
+                            <li>
+                                <a href="#se2">Android Apps</a>
+                                <ul>
+                                    <li><a href="#se20">QRAttendance</a></li>
+                                    <li><a href="#se21">Cheetah</a></li>
+                                    <li><a href="#se22">King's Valley</a></li>
+                                </ul>                            
+                            </li>
+                            
                         </ul>
    
                         <li><a href="#ot">Outros projetos</a></li>
@@ -123,7 +136,9 @@
                     </ul>
                     </div>
 
-                    <li id="se" folder><h2>Software engineering</h2></li>
+                    <li id="se" folder>
+                    
+                    <h2>Software engineering</h2>
 
                     <!-- // descrição dos objetivos -->
 
@@ -148,35 +163,58 @@
                                     </p>
                                 </li>
                                 <li id="se01">
-                                    Sistema de apoio logístico Web JAVA
+                                    Sistema de apostas Web JAVA
                                 </li>
                             </ul>
-                        <li id="se1">Desktop Apps</li>
+                        <li id="se1">Desktop Apps
                             <ul>
                                 <li id="se10">King's Valley</li>
                                 <li id="se11">Gerenciador de arquivos</li>
                                 <li id="se12">Smart Integrated Development Environment</li>
                             </ul>
-                        <li id="se2">Android Apps</li>
+                        </li>
+                        <li id="se2">Android Apps
                             <ul>
                                 <li id="se20">
                                     QRAttendance
-                                    <p></p>
                                 </li>
                                 <li id="se21">
                                     Cheetah
-                                    <p></p>
                                 </li>
                                 <li id="se22">
                                     King's Valley
-                                    <p></p>
                                 </li>
                             </ul>
+                        </li>
+                    </li>
+
+
                         <li id="ot">Outras projetos</li>
                         <ul>
-                            <!-- <li id="ot0">
-                                <p></p>
-                            </li> -->
+                            <li id="ot0"> 
+                                Script de configuração do Vim - <a href="https://github.com/jovanibrasil/dot-files" target="_blank">aqui</a> 
+                            </li> 
+                            <li id="ot1">   
+                                Sniffer em C - <a href="https://github.com/jovanibrasil/sniffer" target="_blank">aqui</a>
+                            </li>     
+                            <li id="ot2"> 
+                                Um breve estudo sobre a série numérica de Thue Morse e os fractais de Koch 
+                                <a href="https://github.com/jovanibrasil/thue-morse" target="_blank">aqui</a>
+                            </li>     
+                            <li id="ot3"> 
+                                Mínimos quadrados para aproximação de tons de cinza
+                                <a href="https://github.com/jovanibrasil/fit-lqm" target="_blank">aqui</a>
+                            </li>     
+                            <li id="ot4"> 
+                                Implemetação dos modelos divisão e conquista, mestre-escravo e híbrido utilizando MPI e OpenMP
+                                <a href="https://github.com/jovanibrasil/parallel-world" target="_blank">aqui</a>
+                            </li>     
+                            <li id="ot5"> 
+                                Implementação de um game single player com uma arquitetura cliente-servidor utilizando Socket Raw
+                                <a href="https://github.com/jovanibrasil/net-game" target="_blank">aqui</a>
+                            </li>     
+
+                            </li> 
                         </ul>
                     </ul>
                     
