--- a/templates/cv.html
+++ b/templates/cv.html
@@ -56,10 +56,7 @@
 
                 <h3>Download</h3>
 
-                Meu currículo completo pode ser baixado em PDF <a href="jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">
-                    <!-- <i class="fa fa-file-pdf-o"  style="font-size:18px;color:red"></i> -->
-                    AQUI
-                </a>.
+                Meu currículo completo pode ser baixado em PDF <a href="jovanibrasil_cv.pdf" download="jovanibrasil_cv" alt="Meu CV">aqui</a>.
 
             </div>
 
