--- a/static/css/pagestyle.css
+++ b/static/css/pagestyle.css
@@ -19,6 +19,11 @@ body {
     justify-content: space-between;
 }
 
+.title-h2 {
+    font-size: 120%;
+    font-weight: bold;
+} 
+
 /* article {
     margin-top: 100px;
     width:700px;
@@ -41,13 +46,6 @@ body {
     margin-right: 50px;
 }
 
-.index {
-     /* display: inline;
-     float: none; */
-     width: 500;
-     margin: auto;
-}
-
 .centered-text {
     align-content: center;
     text-align: center;
@@ -55,6 +53,15 @@ body {
 
 p {
     text-align: justify;
+}
+
+a {
+    text-decoration: none;
+    color: green;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 
