--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,11 @@
 <header class="flex-container">
     
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/pagestyle.css">
     <link rel="stylesheet" type="text/css" href="css/header-style.css">
     <link rel="stylesheet" type="text/css" href="css/home-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    
    
     <div class="topnav" id="myTopnav">
         <a href="/Home">Jovani Brasil</a>
