--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,6 +4,7 @@
 <head>
     <title>Jovani's Projects</title>
     <link rel="stylesheet" href="css/pagestyle.css">
+    <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -22,94 +23,92 @@
                   
                 <div class="index">
                     <h2 class="centered-text">Índice</h2>
-                    <ul>
+                    <ol>
                         <li><a href="#this-website">Este Web-site</a></li>
                         <li><a href="#ai">Inteligência Artificial</a></h2></li>
-                        <ul>
+                        <ol>
                             <li><a href="#ai0">FGSumm</a></li>
                             <li><a href="#ai1">Essay Checker</a></li>
                             <li><a href="#ai2">Time and cause-effect extraction</a></li>
                             <li><a href="#ai3">Agents Simulator</a></li>
                             <li><a href="#ai4">Experimentos em Machine learning</a></li>
                         
-                        </ul>
+                        </ol>
                     
-                        <li><a href="#se">Software engineering</a></li>
-                        <ul>    
+                        <li><a href="#se">Engenharia de Software</a></li>
+                        <ol>    
                             <li>
                                 <a href="#se0">Java Web</a>
-                                <ul>
+                                <ol>
                                     <li><a href="#se00">Loja Web Java</a></li>
                                     <li><a href="#se00">Sistema de apostas Web JAVA</a></li>
-                                </ul>
+                                </ol>
                             </li>
                                 
                             <li>
                                 <a href="#se1">Desktop Apps</a>
-                                <ul>
+                                <ol>
                                     <li><a href="#se10">King's Valley Game</a></li>
                                     <li><a href="#se11">Smart Integrated Development Environment</a></li>
-                                </ul>
+                                </ol>
                             </li>
 
                             <li>
                                 <a href="#se2">Android Apps</a>
-                                <ul>
+                                <ol>
                                     <li><a href="#se20">QRAttendance</a></li>
                                     <li><a href="#se21">Cheetah</a></li>
                                     <li><a href="#se22">King's Valley</a></li>
-                                </ul>                            
+                                </ol>                            
                             </li>
                             
-                        </ul>
+                        </ol>
    
                         <li><a href="#ot">Outros projetos</a></li>
 
-                    </ul>
+                    </ol>
                 </div>     
                 
-                <ul>
-                    <li id="this-website" folder><h2>Este Web-site</h2></li>
-                        <div folder>
-                            <p>
-                                O objetivo desta página é aplicar e demonstrar os conhecimentos obtidos nos meus estudos em diversas tecnologias.
-                                Por esse motivo, foram utilizadas diferentes tecnologias nos diferentes projetos que são ou serão demonstrados aqui.                      
-                            </p>
-                            <h3>Sobre as páginas Home, Projects e CV</h3>
-                            <p>
-                                    As páginas Home, Projects e CV do frontend são implementadas sem a utilização de bibliotecas ou frameworks, 
-                                    utilizando apenas recursos básicos do desenvolvimento web, como html, css e javascript. Para o seu backend, 
-                                    foi utilizado o node runtime para rodar um servidor em javascript responsável por servir as páginas web.  
-                                    
-                                    Note que em Blog ainda está vazio, pois ainda estão sendo definidas as tecnologias que serão utilizadas
-                                    em sua implementação, que deverá ocorrer muito em breve.  
-                            </p><p>
-                                    A partir da página Projects, é possível ser redirecionado para projetos específicos que utilizam diferentes 
-                                    tipos de tecnologias no frontend e no backend. Você pode verificar da seção de cada projeto, quais foram as 
-                                    tecnologias utilizadas, assim como o porquê o como da escolha de cada tecnologia.
-                            </p>
-                            <h3>Infraestrutura</h3>
-                            <p>
-                                Atualmente esta página web e minhas soluções estão hospedadas em um servidor, utilizando diversos Docker 
-                                containers para conciliar de forma escalável e confiável os diversos tipos de tecnologias. Para orquestração
-                                está sendo utilizado Docker compose, devido a simplicidade do projeto. Um servidor NGINX é utilizado para 
-                                implementação de um proxy reverso no sistema.
+                <ol>
+                    <li class="anchor title-h2" id="this-website" folder><h2 class="title-h2">Este Web-site</h2></li>
+                    <div folder>
+                        <p>
+                            O objetivo desta página é aplicar e demonstrar os conhecimentos obtidos nos meus estudos em diversas tecnologias.
+                            Por esse motivo, foram utilizadas diferentes tecnologias nos diferentes projetos que são ou serão demonstrados aqui.                      
+                        </p>
+                        <h3>Sobre as páginas Home, Projects e CV</h3>
+                        <p>
+                                As páginas Home, Projects e CV do frontend são implementadas sem a utilização de bibliotecas ou frameworks, 
+                                utilizando apenas recursos básicos do desenvolvimento web, como html, css e javascript. Para o seu backend, 
+                                foi utilizado o node runtime para rodar um servidor em javascript responsável por servir as páginas web.  
+                                
+                                Note que em Blog ainda está vazio, pois ainda estão sendo definidas as tecnologias que serão utilizadas
+                                em sua implementação, que deverá ocorrer muito em breve.  
+                        </p><p>
+                                A partir da página Projects, é possível ser redirecionado para projetos específicos que utilizam diferentes 
+                                tipos de tecnologias no frontend e no backend. Você pode verificar da seção de cada projeto, quais foram as 
+                                tecnologias utilizadas, assim como o porquê o como da escolha de cada tecnologia.
+                        </p>
+                        <h3>Infraestrutura</h3>
+                        <p>
+                            Atualmente esta página web e minhas soluções estão hospedadas em um servidor, utilizando diversos Docker 
+                            containers para conciliar de forma escalável e confiável os diversos tipos de tecnologias. Para orquestração
+                            está sendo utilizado Docker compose, devido a simplicidade do projeto. Um servidor NGINX é utilizado para 
+                            implementação de um proxy reverso no sistema.
 
-                                <!-- // TODO image -->
+                            <!-- // TODO image -->
 
-                            </p>
-                        </div>
-
-                    <li id="ai" folder><h2>Inteligência Artificial</h2></li>
-                    <div>
+                        </p>
+                    </div>
+                    <li class="anchor title-h2" id="ai" folder><h2 class="title-h2">Inteligência Artificial</h2></li>
+                    <div folder>
 
                     Se você leu um pouco sobre mim na página principal deste site, você já sabe que meu principal interesse é na área de 
                     processamento de linguagem natural, que atualmente está fortemente relacionada com inteligência artificial. Tenho interesse
                     também na teoria de agentes e em técnicas de machine learning. 
 
                     Nesta seção existe um resumo dos meus projetos e ponteiros para alguns resultados obtidos.
-                    <br/><br/>
-                    <ul>
+                    <ol>
                         <li id="ai0">
                             FGSumm
                             <p>
@@ -133,64 +132,60 @@
                         <li id="ai3">Agents Simulator</li>
                         <li id="ai4">Experimentos em Machine learning</li>
 
-                    </ul>
+                    </ol>
                     </div>
-
-                    <li id="se" folder>
-                    
-                    <h2>Software engineering</h2>
-
-                    <!-- // descrição dos objetivos -->
-
-                    <ul>    
-                        <li id="se0">Java Web</li>
-                            <ul>
-                                <li id="se00">
-                                    Loja Web Java
-                                    <p>
-                                        A ideia deste projeto é desenvolver uma loja Web em Java. O objetivo é, ao fim do projeto, ter as 
-                                        funcionalidas básicas de uma loja web qualquer, como listagens de produtos, carrinho de compras, 
-                                        login de usuários e gerênciamento de produtos do site.
-                                    </p>
-                                    <p>
-                                        A versão atual do sistema implementa o gerenciamento de produtos. Para isso foram utilizadas 
-                                        as tecnologias JSF, Primefaces, Hibernate, MySql.   
-                                    </p>
-                                    <p>
-                                        O código fonte pode ser conferido aqui (Github) e uma versão online do sistema pode ser acessado 
-                                        <a href="/store-system" target="_blank">aqui</a>. A versão online pode demorar a carregar, devido
-                                        a limitações do servidor utilizado.        
-                                    </p>
-                                </li>
-                                <li id="se01">
-                                    Sistema de apostas Web JAVA
-                                </li>
-                            </ul>
-                        <li id="se1">Desktop Apps
-                            <ul>
-                                <li id="se10">King's Valley</li>
-                                <li id="se11">Gerenciador de arquivos</li>
-                                <li id="se12">Smart Integrated Development Environment</li>
-                            </ul>
-                        </li>
-                        <li id="se2">Android Apps
-                            <ul>
-                                <li id="se20">
-                                    QRAttendance
-                                </li>
-                                <li id="se21">
-                                    Cheetah
-                                </li>
-                                <li id="se22">
-                                    King's Valley
-                                </li>
-                            </ul>
-                        </li>
-                    </li>
-
-
-                        <li id="ot">Outras projetos</li>
-                        <ul>
+                    <li class="anchor title-h2" id="se" folder><h2 class="title-h2">Software engineering</h2></li>
+                    <div folder>
+                        <ol>    
+                            <li id="se0">Java Web
+                                <ol>
+                                    <li id="se00">
+                                        Loja Web Java
+                                        <p>
+                                            A ideia deste projeto é desenvolver uma loja Web em Java. O objetivo é, ao fim do projeto, ter as 
+                                            funcionalidas básicas de uma loja web qualquer, como listagens de produtos, carrinho de compras, 
+                                            login de usuários e gerênciamento de produtos do site.
+                                        </p>
+                                        <p>
+                                            A versão atual do sistema implementa o gerenciamento de produtos. Para isso foram utilizadas 
+                                            as tecnologias JSF, Primefaces, Hibernate, MySql.   
+                                        </p>
+                                        <p>
+                                            O código fonte pode ser conferido aqui (Github) e uma versão online do sistema pode ser acessado 
+                                            <a href="/store-system" target="_blank">aqui</a>. A versão online pode demorar a carregar, devido
+                                            a limitações do servidor utilizado.        
+                                        </p>
+                                    </li>
+                                    <li id="se01">
+                                        Sistema de apostas Web JAVA
+                                    </li>
+                                </ol>
+                            </li>
+                            <li id="se1">Desktop Apps
+                                <ol>
+                                    <li id="se10">King's Valley</li>
+                                    <li id="se11">Gerenciador de arquivos</li>
+                                    <li id="se12">Smart Integrated Development Environment</li>
+                                </ol>
+                            </li>
+                            <li id="se2">Android Apps
+                                <ol>
+                                    <li id="se20">
+                                        QRAttendance
+                                    </li>
+                                    <li id="se21">
+                                        Cheetah
+                                    </li>
+                                    <li id="se22">
+                                        King's Valley
+                                    </li>
+                                </ol>
+                            </li>
+                        </ol>
+                    </div>
+                    <li class="anchor title-h2" id="ot" folder><h2 class="title-h2">Outras projetos</h2></li>
+                    <div folder>
+                        <ol>
                             <li id="ot0"> 
                                 Script de configuração do Vim - <a href="https://github.com/jovanibrasil/dot-files" target="_blank">aqui</a> 
                             </li> 
@@ -213,13 +208,9 @@
                                 Implementação de um game single player com uma arquitetura cliente-servidor utilizando Socket Raw
                                 <a href="https://github.com/jovanibrasil/net-game" target="_blank">aqui</a>
                             </li>     
-
-                            </li> 
-                        </ul>
-                    </ul>
-                    
-                </ul>
-
+                        </ol>
+                    </div>
+                </ol>  
             </div>
 
         </article>
