Add moocs links and update content from projects page

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -29,10 +29,8 @@
                         <ol>
                             <li><a href="#ai0">FGSumm</a></li>
                             <li><a href="#ai1">Essay Checker</a></li>
-                            <li><a href="#ai2">Time and cause-effect extraction</a></li>
-                            <li><a href="#ai3">Agents Simulator</a></li>
-                            <li><a href="#ai4">Experimentos em Machine learning</a></li>
-                        
+                            <li><a href="#ai2">Simulator Multiagente</a></li>
+                            <li><a href="#ai3">Experimentos em Machine learning</a></li>    
                         </ol>
                     
                         <li><a href="#se">Engenharia de Software</a></li>
@@ -40,8 +38,9 @@
                             <li>
                                 <a href="#se0">Java Web</a>
                                 <ol>
-                                    <li><a href="#se00">Loja Web Java</a></li>
-                                    <li><a href="#se00">Sistema de apostas Web JAVA</a></li>
+                                    <li><a href="#se00">Meu Blog</a></li>
+                                    <li><a href="#se01">Loja Web</a></li>
+                                    <li><a href="#se02">Sistema de Leilões</a></li>
                                 </ol>
                             </li>
                                 
@@ -125,12 +124,9 @@
                                 resultados.
                             </p>
                         </li>
-                        <li id="ai2">
-                            Time and cause-effect extraction
-                        </li>
 
-                        <li id="ai3">Agents Simulator</li>
-                        <li id="ai4">Experimentos em Machine learning</li>
+                        <li id="ai2">Simulator Multiagente</li>
+                        <li id="ai3">Experimentos em Machine learning</li>
 
                     </ol>
                     </div>
@@ -140,7 +136,15 @@
                             <li id="se0">Java Web
                                 <ol>
                                     <li id="se00">
-                                        Loja Web Java
+                                        Meu Blog
+                                        <p>
+                                            Implementaçãode um blog com funcionalidades básicas, como visualização, criação, edição e remoção
+                                            de posts, com controle de usuários por autenticação. Neste projeto são utilizados Spring Boot,
+                                            Spring MVC, Spring Authentication, JPA (Java Persistence API) e MYSQL.
+                                        </p>
+                                    </li>
+                                    <li id="se01">
+                                        Loja Web
                                         <p>
                                             A ideia deste projeto é desenvolver uma loja Web em Java. O objetivo é, ao fim do projeto, ter as 
                                             funcionalidas básicas de uma loja web qualquer, como listagens de produtos, carrinho de compras, 
@@ -148,16 +152,19 @@
                                         </p>
                                         <p>
                                             A versão atual do sistema implementa o gerenciamento de produtos. Para isso foram utilizadas 
-                                            as tecnologias JSF, Primefaces, Hibernate, MySql.   
-                                        </p>
-                                        <p>
-                                            O código fonte pode ser conferido aqui (Github) e uma versão online do sistema pode ser acessado 
+                                            as tecnologias JSF (Java Server Faces), Primefaces, Hibernate, MySql. O código fonte pode ser 
+                                            conferido aqui (Github) e uma versão online do sistema pode ser acessado 
                                             <a href="/store-system" target="_blank">aqui</a>. A versão online pode demorar a carregar, devido
                                             a limitações do servidor utilizado.        
                                         </p>
                                     </li>
-                                    <li id="se01">
-                                        Sistema de apostas Web JAVA
+                                    <li id="se02">
+                                        Sistema de Leilões
+                                        <p>
+                                            Sistema ainda em fase de projeto. A ideia é criar um sistema para gerenciar uma série de leilões.
+                                            Usuários premium podem criar, editar e remover leilões, além de poderem realizar lances. Os demais
+                                            usuários podem apenas realizar lances.  
+                                        </p>
                                     </li>
                                 </ol>
                             </li>
