--- a/templates/home.html
+++ b/templates/home.html
@@ -44,8 +44,10 @@
                 do Rio Grande do Sul e atualmente estou me preparando para começar a trabalhar como desenvolvedor de software. 
                 Hoje, minhas principais áreas de interesse são engenharia de software, processamento de linguagem natural 
                 e machine learning. Tenho interesse nas mais diversas técnologias e gosto de estar sempre me atualizando. 
-                Sou apaixonado e defensor da educação à distância, sendo fã de plataformas como Coursera, Udemy
-                e Complexity Explorer. Caso necessário, sinta-se à vontade para entrar em contato comigo. 
+                Sou apaixonado e defensor da educação à distância, sendo fã de plataformas como 
+                <a href="https://www.coursera.org/" target="_blank">Coursera</a>, <a href="https://www.udemy.com/" target="_blank">Udemy</a> 
+                e <a href="https://www.complexityexplorer.org/" target="_blank">Complexity Explorer</a>. 
+                Caso necessário, sinta-se à vontade para entrar em contato comigo. 
                 Você também pode visitar meu <a href="/CV">CV</a>, para mais detalhes sobre minhas qualificações.
                 </p>
 
